@@ -104,6 +104,7 @@ Views 6.x-3.x-dev
     o #706464 by dereine: Test full(normal) pager plugin.
     o by dereine: Test pluggable access.
     o by dereine: Test pluggable default argument.
+    o by dereine: Test exposed forms ui.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
